plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'org.graalvm.buildtools.native' version '0.9.27'
}

apply plugin : "java"
apply plugin: 'application'
mainClassName = "com.flt.fltspring.FltSpringApplication"

ext {
    javaMainClass = "com.flt.fltspring.FltSpringApplication"
}

application {
    mainClassName = javaMainClass
}

jar {
    manifest {
        attributes 'Main-Class': mainClassName
    }
}

group = 'com.flt'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation group: 'com.azure', name: 'azure-ai-documentintelligence', version: '1.0.0-beta.4'
    compileOnly 'org.projectlombok:lombok'
    implementation platform('com.azure:azure-sdk-bom:1.2.18')
    implementation 'com.azure:azure-storage-blob'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'com.google.firebase:firebase-admin:9.2.0'
    implementation 'commons-io:commons-io:+'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'javax.cache:cache-api'
    implementation 'com.github.ben-manes.caffeine:caffeine:2.8.2'
    implementation 'com.github.ben-manes.caffeine:jcache:2.8.2'
    implementation group: 'com.giffing.bucket4j.spring.boot.starter', name: 'bucket4j-spring-boot-starter', version: '0.12.7'
    implementation 'com.infisical:sdk:3.0.1'
}

tasks.named('bootBuildImage') {
    builder = 'paketobuildpacks/builder-jammy-tiny:latest'
}

tasks.named('test') {
    useJUnitPlatform()
}
